--- a/content/0.index.md
+++ b/content/0.index.md
@@ -11,28 +11,27 @@ main:
 ::block-hero
 ---
 cta:
-  - Get started
+  - Comenzar el tutorial
   - /introduction/getting-started
 secondary:
-  - Open on GitHub →
-  - https://github.com/nuxt-themes/docus
+  - Acceder a GitHub →
+  - https://github.com/Ambidiosidad/actividad2
 ---
 
 #title
-test 1 
+Tutorial de NextJS
 
 #description
-Write pages in [Markdown](https://content.nuxtjs.org), use [Vue](https://vuejs.org) components and enjoy the power of [Nuxt](https://nuxt.com).
+Next.js es un framework basado en React que facilita la creación de aplicaciones web con renderizado del lado del servidor (SSR) y generación de sitios estáticos (SSG). Su objetivo principal es hacer que el desarrollo de aplicaciones React sea más sencillo, optimizado y escalable, especialmente en lo referente a la performance y el SEO (Posicionamiento en motores de búsqueda). Con este tutorial aprenderas:
 
 #extra
   ::list
-  - **+50 Components** ready to build rich pages
-  - **Docs** and **Page** layouts
-  - Start from a `README`, scale to a framework documentation
-  - Navigation and Table of Contents generation
-  - Fully configurable design system
-  - Leverages [**Typography**](https://typography.nuxt.space/) and [**Elements**](https://elements.nuxt.dev)
-  - Used on [Content Documentation](https://content.nuxtjs.org)
+  - **Porque NextJS** es la mejor opcion
+  - **Como instalar** NextJS
+  - Primeros pasos para usar NextJS
+  - Como crear tu primera aplicación
+  - Explicación y funcionamiento del framework
+  - Conclusiones finales
   ::
 
 #support
