--- a/content/0.index.md
+++ b/content/0.index.md
@@ -35,7 +35,7 @@ Next.js es un framework basado en React que facilita la creación de aplicacione
   ::
 
 #support
-  ::terminal
+![NextJS Preview](/nextjs3.webp)
   ---
   content:
   - npx nuxi@latest init -t themes/docus
