--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,14 +1,22 @@
-# Getting Started
+# ¿Por qué Next.js?
 
-From your Markdown files to a deployed website in few minutes.
+Next.js es un framework basado en React que facilita la creación de aplicaciones web con renderizado del lado del servidor (SSR) y generación de sitios estáticos (SSG). 
+Su objetivo principal es hacer que el desarrollo de aplicaciones React sea más sencillo, optimizado y escalable, especialmente en lo referente a la performance y el SEO (Posicionamiento en motores de búsqueda).
 
-## Play online
+## ¿Qué usos tiene?
 
-You can start playing with Docus in your browser using Stackblitz:
+1. Aplicaciones web con SEO mejorado gracias a la pre-renderización de páginas.
+2. Sitios estáticos con capacidades dinámicas, muy útiles para blogs, documentaciones o landing pages.
+3. Aplicaciones de e-commerce con necesidad de rápido despliegue, gracias al rendimiento mejorado y la fácil integración con servicios externos.
+4. Dashboards y herramientas internas donde se requieran funcionalidades de SSR o datos dinámicos.
 
-:button-link[Play on StackBlitz]{size="small" icon="IconStackBlitz" href="https://stackblitz.com/github/nuxt-themes/docus-starter" blank}
+## ¿Sobre qué lenguajes se apoya?
 
-## Create a new project
+1. JavaScript: Base principal del ecosistema.
+2. TypeScript (opcional): Soporte completo para tipado estático.
+3. React: Next.js está construido sobre React, por lo que se apoya fuertemente en la sintaxis JSX/TSX y en el modelo de componentes de React.
+
+
 
 1. Start a fresh Docus project with:
 
@@ -49,6 +57,12 @@ yarn dev
 ```bash [pnpm]
 pnpm run dev
 ```
+
+## ¿Que debes saber antes de usar Next?
+
+1. Conocimientos básicos de JavaScript y de React.
+2. Node.js instalado (preferentemente la última versión LTS).
+3. Conocimientos de HTML y CSS para maquetar y dar estilos a los componentes.
 
 ::
 
