--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -16,31 +16,18 @@ Su objetivo principal es hacer que el desarrollo de aplicaciones React sea más 
 2. TypeScript (opcional): Soporte completo para tipado estático.
 3. React: Next.js está construido sobre React, por lo que se apoya fuertemente en la sintaxis JSX/TSX y en el modelo de componentes de React.
 
+## ¿Que debes saber antes de usar Next?
 
-
-1. Start a fresh Docus project with:
-
-```bash [npx]
-npx nuxi@latest init docs -t themes/docus
-```
-
-2. Install the dependencies in the `docs` folder:
-
-::code-group
-
-  ```bash [npm]
-  npm install
-  ```
-
-  ```bash [yarn]
-  yarn install
-  ```
-
-  ```bash [pnpm]
-  pnpm install --shamefully-hoist
-  ```
+1. Conocimientos básicos de JavaScript y de React.
+2. Node.js instalado (preferentemente la última versión LTS).
+3. Conocimientos de HTML y CSS para maquetar y dar estilos a los componentes.
 
 ::
+
+::alert{type="success"}
+✨ Well done! A browser window should automatically open for <http://localhost:3000>
+::
+
 
 3. Run the `dev` command to start Docus in development mode:
 
