--- a/content/1.introduction/2.project-structure.md
+++ b/content/1.introduction/2.project-structure.md
@@ -1,21 +1,32 @@
-# Project Structure
+# Instalación del Framework
 
-Docus is a Nuxt theme that provides a ready-to-use documentation website, if you are familiar with Nuxt, you will feel right at home.
+Sí, Next.js requiere instalarse en un proyecto Node.js, mediante npm o yarn (o pnpm) para poder ejecutarse y desarrollar aplicaciones con sus funciones.
 
-## Directory Structure
+## ¿Qué pasos hay que realizar para la instalación?
 
-This is the minimal directory structure to get an up and running Docus website.
+1. Instalar Node.js (si no lo tienes ya).
+2. Crear un directorio para tu proyecto (p. ej. `my-next-app`) e iniciar npm:
 
 ```bash
-content/
-  index.md
-app.config.ts
-nuxt.config.ts
+mkdir my-next-app
+cd my-next-app
+npm init -y
+```
+3. Instalar Next.js, React y React DOM:
+   
+```bash
+npm install next react react-dom
 ```
 
-The `content/` directory is where you [write Markdown pages](/introduction/writing-pages).
+4. Crear las carpetas y archivos básicos para la app, entre ellos:
+   
+*`pages/` (o `app/` disi usas la App Router en Next.js 13+)
+*`public/`
+*`styles/` (opcional, si planeas usar CSS propio)
 
-The `app.config.ts` is where you [configure Docus](/introduction/configuration) to fit your branding and design.
+## ¿Versiones necesarias?
 
+Node.js: Se recomienda usar la versión LTS (por ejemplo, 18 o 16), aunque Next.js suele funcionar también con versiones más modernas.
+Next.js: Lo ideal es usar la última versión estable (por ejemplo, `^13.x` o `^14.x`).
+React: Instalado con la versión correspondiente a la que Next.js requiera.
 
-The `nuxt.config.ts` is your [Nuxt configuration](https://nuxt.com/docs/getting-started/configuration).
