--- a/content/1.introduction/2.project-structure.md
+++ b/content/1.introduction/2.project-structure.md
@@ -20,13 +20,13 @@ npm install next react react-dom
 
 4. Crear las carpetas y archivos básicos para la app, entre ellos:
    
-*`pages/` (o `app/` disi usas la App Router en Next.js 13+)
-*`public/`
-*`styles/` (opcional, si planeas usar CSS propio)
+-`pages/` (o `app/` disi usas la App Router en Next.js 13+)
+-`public/`
+-`styles/` (opcional, si planeas usar CSS propio)
 
 ## ¿Versiones necesarias?
 
-Node.js: Se recomienda usar la versión LTS (por ejemplo, 18 o 16), aunque Next.js suele funcionar también con versiones más modernas.
-Next.js: Lo ideal es usar la última versión estable (por ejemplo, `^13.x` o `^14.x`).
-React: Instalado con la versión correspondiente a la que Next.js requiera.
+-Node.js: Se recomienda usar la versión LTS (por ejemplo, 18 o 16), aunque Next.js suele funcionar también con versiones más modernas.
+-Next.js: Lo ideal es usar la última versión estable (por ejemplo, `^13.x` o `^14.x`).
+-React: Instalado con la versión correspondiente a la que Next.js requiera.
 
