--- a/content/1.introduction/3.writing-pages.md
+++ b/content/1.introduction/3.writing-pages.md
@@ -1,41 +1,18 @@
-# Writing Pages
+# Instalación del framework 2/
 
-Docus is made to let you write all your content in Markdown and Vue components with the MDC syntax.
+## ¿Rutas para tener en cuenta?
 
-Each Markdown page in the `content/` folder will be mapped to a route.
+- `/pages` (o la nueva /app en Next.js 13 con App Router): Aquí se colocan las vistas o páginas que se renderizan.
+- `/api` (si usas Pages Router) o /app/api (si usas App Router en Next.js 13): Para las APIs integradas.
+- `/public`: Archivos estáticos (imágenes, fuentes, etc.).
 
-| File                     | Generated route       |
-| ------------------------ | :-------------------- |
-| `index.md`               | `/`                   |
-| `about.md`               | `/about`              |
-| `blog/index.md`          | `/blog`               |
-| `blog/hello.md`          | `/blog/hello`         |
-| `1.guide/2.installation` | `/guide/installation` |
+## ¿Variables de entorno?
 
-## Frontmatter
+- Next.js permite usar variables de entorno definidas en archivos como `.env.local`, `.env.production`, etc.
+- Debes configurar variables sensibles (claves de APIs, accesos a servicios externos) por medio de estas variables de entorno. Next.js provee la forma de exponerlas (o mantenerlas secretas) mediante prefijos (`NEXT_PUBLIC_`), etc.
 
-Docus supports multiple Front-matter attributes for pages.
 
-```md [index.md]
----
-title: "Get Started"
-description: "Let's learn how to use my amazing module."
----
-```
+## ¿Necesita base de datos?
 
-| **Key**                 | **Type**  | **Default** | **Description**                                               |
-| ----------------------- | --------- | ----------- | ------------------------------------------------------------- |
-| `layout`                | `string`  | `default`   | Use any layout name like you would in `definePageMeta()`      |
-| `title`                 | `string`  |             | Defines the page title and H1 in docs pages                   |
-| `description`           | `string`  |             | Defines the page description and excerpt in docs pages        |
-| `redirect`              | `string`  |             | A route path to redirect                                      |
-| `image`                 | `object`  |             | OpenGraph cover image                                         |
-| **Docs layout options** |           |             |                                                               |
-| `aside`                 | `boolean` |             | Toggles the visibility of aside navigation                    |
-| `toc`                   | `boolean` |             | Toggles the visibility of table of contents                   |
-| `header`                | `boolean` |             | Toggles the visibility of the page header                     |
-| `bottom`                | `boolean` |             | Toggles the visibility of page bottom section                 |
-| **Navigation options**  |           |             |                                                               |
-| `navigation`            | `boolean` |             | Toggles the visibility of the page or directory in navigation |
-| `navigation.title`      | `string`  |             | Changes the name of the page or directory in navigation       |
-| `navigation.icon`       | `string`  |             | Changes the icon of the page or directory in navigation       |
+- Next.js en sí no requiere una base de datos para funcionar. Puedes crear una aplicación puramente estática.
+- Sin embargo, si tu aplicación maneja datos (por ejemplo, usuarios, contenido dinámico, etc.), deberás integrar la base de datos de tu preferencia (MongoDB, PostgreSQL, MySQL, etc.) o utilizar algún servicio en la nube.
