--- a/content/2.api/1.components.md
+++ b/content/2.api/1.components.md
@@ -2,21 +2,37 @@
 
 ## ¿Cómo empezar a crear una aplicación base?
 
+- Con Next.js, la manera más rápida es usar la CLI oficial de Vercel:
 
+```bash
+npx create-next-app@latest
+```
+Esto generará una estructura de carpetas y archivos preconfigurados para que puedas comenzar a trabajar de inmediato.
 
-## `<VideoPlayer />`
+- Si prefieres hacerlo manualmente, crea la carpeta `pages/` con un archivo `index.js` y un script en tu `package.json` del tipo:
+
+```json
+{
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  }
+}
+```
+Así podrás iniciar la aplicación con `npm run dev`.
 
 ::code-group
 
   ::code-block{label="Preview" preview}
     ::div
-      :video-player{src="https://www.youtube.com/watch?v=o9e12WbKrd8"}
+      :video-player{src="https://www.youtube.com/watch?v=mgr4TiJEr44&ab_channel=Garajedeideas%7CTech"}
     ::
   ::
 
   ```md [Code]
   ::div
-    :video-player{src="https://www.youtube.com/watch?v=o9e12WbKrd8"}
+    :video-player{src="https://www.youtube.com/watch?v=mgr4TiJEr44&ab_channel=Garajedeideas%7CTech"}
   ::
   ```
 
@@ -35,6 +51,10 @@ source: "components/content/VideoPlayer.vue"
 
 
 ## ¿Cómo visualizar los resultados de la ejecución?
+
+- Desde la terminal, al correr `npm run dev`, se te indica la URL (por defecto `http://localhost:3000`) donde tu aplicación está en funcionamiento.
+- Cuando hagas cambios en tus archivos, Next.js recarga automáticamente la página (hot reload), por lo que no es necesario reiniciar el servidor manualmente.
+
 
 
 
