--- a/content/2.api/2.composables.md
+++ b/content/2.api/2.composables.md
@@ -1,88 +1,23 @@
-# Composables
+# Explicación del funcionamiento del framework
 
-Discover the Docus composables to use in your custom Vue components and pages.
+## ¿Actúa sobre páginas, ficheros, secciones…?
 
-## `useDocus()`
+- En Next.js, cada archivo dentro de `/pages` (o cada carpeta y archivo en `/app` si usas la App Router) se convierte automáticamente en una ruta (URL) de tu aplicación.
+- Next.js se encarga de procesar los archivos `.js` o `.tsx`, renderizar componentes de React y servirlos como páginas HTML cuando el usuario navega a esas rutas.
 
-`useDocus()`{lang=ts} gives access to docus runtime config, all default values and your custom config from `app.config.ts`
+## ¿Cómo se editan/modifican los ficheros que actúan en el framework?
 
-- `config` refers to the merged config of the current page.
+- Simplemente abres los archivos de la carpeta `pages/` (o `app/`) con tu editor de código (VS Code, WebStorm, etc.) y editas el componente React que contenga.
+- Al guardar los cambios, Next.js recompila la página y la muestra actualizada en tu navegador.
 
-`main`, `header`, `aside`, `footer` and `titleTemplate` can be set from `_dir.yml` and any `page.md` file.
+## ¿Cómo se editan/modifican los ficheros que actúan en el framework?
 
-The configs in `app.config` file will be used as defaults.
+- Si deseas acceder a algún componente o recurso en otra parte del proyecto, se importa usando rutas relativas o absolutas (según tu configuración). Por ejemplo:
 
-```vue
-<script setup>
-const { config } = useDocus()
-</script>
 
-<template>
-  <div>
-    <h1>{{ config.title }}</h1>
-    <p>{{ config.description }}</p>
-  </div>
-</template>
+```jsx
+import MiComponente from '@/components/MiComponente';
 ```
 
-- `tree` refers to the current navigation tree that is displayed in the `aside` component.
+- Para APIs (si Next.js es el servidor), las rutas se generan automáticamente. Por ejemplo, un archivo en `pages/api/user.js` se serviría en `http://localhost:3000/api/user`.
 
-```vue
-<script setup>
-const { tree } = useDocus()
-</script>
-
-<template>
-  <DocsAsideTree :links="tree" />
-</template>
-```
-
-::source-link
----
-source: "composables/useDocus.ts"
----
-::
-
-## `useMenu()`
-
-`useMenu()` gives access to `$menu` plugin controlling mobile navigation globally.
-
-```ts
-const {
-  // Is menu visible
-  visible,
-  // Close menu function
-  close,
-  // Open menu function
-  open,
-  // Toggle menu function
-  toggle
-} = useMenu()
-```
-
-::source-link
----
-source: "composables/useMenu.ts"
----
-::
-
-## `useScrollspy()`
-
-`useScrollspy()` is used in `docs` layout to make the ToC display the currently visible headings.
-
-```ts
-const {
-  // Headings on the page
-  visibleHeadings,
-  // Active headings (for the current page)
-  activeHeadings,
-  // Update headings (an array of DOM nodes)
-  updateHeadings
-} = useScrollspy()
-```
-
-::source-link
----
-source: "composables/useScrollspy.ts"
----
-::
