--- a/content/2.api/3.layouts.md
+++ b/content/2.api/3.layouts.md
@@ -1,43 +1,15 @@
-# Layouts
-Docus provides multiple built-in layouts for displaying your Markdown pages.
+# Conclusiones del tutorial
+Con este tutorial, has aprendido:
 
-## `default`
+- Por qué usar Next.js: optimizaciones integradas, SEO mejorado, SSR y SSG para tus proyectos React.
+- Cómo instalarlo y los prerrequisitos fundamentales (Node.js, React).
+- Cómo organizar tu primer proyecto y mostrar un simple “Hola Mundo”.
+- Cómo funciona su estructura de rutas y renderizado de páginas.
+- Cómo extenderlo para crear APIs y otras funcionalidades, e integrar bases de datos si es necesario.
 
-The default layout for every page created in the project. This layout renders multiple section alongside the content:
-
-- Aside navigation menu (togglable with `aside: false/true`)
-- Page bottom section (togglable with `bottom: false/true`)
-- Table of content (togglable with `toc: false/true`)
-
-```md [index.md]
----
-aside: true
-bottom: true
-toc: false
----
-
-Your awesome content
-```
-
-Current page is live sample of default layout.
-
-## `page`
-
-`page` layout is content focused layout. This layout does not render aside menu of table of contents.
+Next.js se ha convertido en uno de los frameworks de referencia para crear aplicaciones web modernas gracias a su facilidad de configuración, su soporte para distintas estrategias de renderizado y la posibilidad de incorporar TypeScript, APIs, y servicios externos de forma sencilla. Al finalizar este tutorial, ya dispones de los conocimientos básicos para iniciar tu primer proyecto con Next.js y seguir explorando sus funcionalidades avanzadas.
 
 
-This layout accept some configuration from content front-matter.
-
-- `fluid`: By setting `fluid: true` in content front-matter the content will be rendered in full width.
-- `constrainedClass`: Using this option you can modify layout container look. Like constraining layout width of changing the background.
-- `padded`: Setting `padded: true` in front-matter will add horizontal padding in the layout.
-
-```md [index.md]
----
-title: Home
-layout: page
-fluid: true
----
-```
-
-Check [Home page](/) as live sample of page layout
+::alert{type="success"}
+✨ Enhorabuena!
+::
