--- a/content/0.index.md
+++ b/content/0.index.md
@@ -14,8 +14,8 @@ cta:
   - Comenzar el tutorial
   - /introduction/getting-started
 secondary:
-  - Acceder a GitHub →
-  - https://github.com/Ambidiosidad/actividad2
+  - Acceder al GitHub de la actividad →
+  - https://github.com/Ambidiosidad/jorgesb-nextjs
 ---
 
 #title
